feat(duui-mm-embedder): Added lua serializer for embeddings